--- a/views/trade.ejs
+++ b/views/trade.ejs
@@ -8,28 +8,16 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
         <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
         <link rel="icon" type="image/x-icon" href="/public/favicon.ico">
+        <link href="shared_components.css" rel="stylesheet">
     </head>
 </html>
 
 <body>
-  <div id="topBar_id">
-    <h1>PORTFOLIOTRACKER</h1>
-    <form action="/logout" method="POST" style="display: inline;">
-      <button type="submit" id="logoutButton" title="Log ud">
-        <span class="material-symbols-outlined">
-          account_circle_off
-        </span>
-      </button>
-    </form>
-  </div>
+  <!-- Top Bar -->
+  <%- include('partials/topbar') %>
 
-  <ul>
-    <li><a href="/dashboard"><span class="material-symbols-outlined">dashboard</span>Dashboard</a></li>
-    <li><a href="/portfolios"><span class="material-symbols-outlined">folder_open</span>Portfolios</a></li>
-    <li><a href="/trade" style="color: gray;"><span class="material-symbols-outlined" style="color: gray;">query_stats</span>Market</a></li>
-    <li><a href="/accounts"><span class="material-symbols-outlined">account_balance_wallet</span>Accounts</a></li>
-    <li><a href="/profile"><span class="material-symbols-outlined">person</span>Profile</a></li>
-  </ul>
+  <!-- Side Navigation -->
+  <%- include('partials/sidebar') %>
 
       
   <br>
