--- a/public/portfolios_style.css
+++ b/public/portfolios_style.css
@@ -182,6 +182,7 @@ th {
   cursor: pointer;
   display: flex;
   align-items: center;
+  margin-left: 540px;
   
   transition: background-color 0.3s ease;
   font-family: normalSkrift;
@@ -193,5 +194,30 @@ th {
 }
 
 .primary-btn .material-symbols-outlined {
+  font-size: 20px;
+}
+
+.secondary-btn {
+  background-color: #333;
+  color: white;
+  padding: 8px 15px;
+  border: none;
+  border-radius: 5px;
+  font-family: normalSkrift;
+  font-size: 14px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  
+  transition: background-color 0.3s ease;
+  font-family: normalSkrift;
+}
+
+.secondary-btn:hover {
+  background-color: #444;
+  
+}
+
+.secondary-btn .material-symbols-outlined {
   font-size: 20px;
 }
